# job-scheduler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt
examples/nlp_processing/: demo.sh  main.cpp  nlp_jobs.hpp
examples/ride_service/: demo.sh  main.cpp  ride_jobs.hpp
examples/temperature_sensor/: demo.sh  main.cpp  temperature_jobs.hpp
include/api/: cli_controller.hpp  http_controller.hpp
include/core/: example_jobs.hpp  job.hpp  job_context.hpp  job_execution.hpp  job_id.hpp  job_metadata.hpp  job_result.hpp  job_result_serialization.hpp  job_status.hpp
include/scheduler/: dependency_graph.hpp  job_queue.hpp  process_pool.hpp  scheduler.hpp
include/storage/: execution_repository.hpp  in_memory_execution_repository.hpp  job_registry.hpp
src/: cli_main.cpp  http_main.cpp
src/api/: cli_controller.cpp  http_controller.cpp
src/core/: job_execution.cpp  job_id.cpp  job_result.cpp  job_status.cpp
src/scheduler/: dependency_graph.cpp  job_queue.cpp  process_pool.cpp  scheduler.cpp
src/storage/: in_memory_execution_repository.cpp  job_registry.cpp
test/: CMakeLists.txt  core_test.cpp  data_structures_test.cpp  placeholder_test.cpp  scheduler_test.cpp  storage_test.cpp  test_helpers.hpp
