add_executable(nlp_example nlp_processing/main.cpp)
target_include_directories(nlp_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/nlp_processing)
target_link_libraries(nlp_example PRIVATE job_scheduler_lib)

add_executable(temperature_example temperature_sensor/main.cpp)
target_include_directories(temperature_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/temperature_sensor)
target_link_libraries(temperature_example PRIVATE job_scheduler_lib)
